# weather-fastapi

./: README.md  justfile  main.py  pyproject.toml
.zed/: settings.json
app/: main.py
app/core/: config.py
app/routers/: health.py  weather.py
app/services/: weather_service.py
